# remoteFileSystem

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml
.cargo/: config.toml
.config/: nextest.toml
backend/: Cargo.toml
backend/src/: config.rs  lib.rs  logging.rs  main.rs  models.rs  node_lab5.rs  routes.rs  storage.rs
backend/src/logging/: console.rs
client/: .env  Cargo.toml  Dockerfile
client/src/: app.rs  cache.rs  commands.rs  config.rs  daemon.rs  error.rs  fs_model.rs  fuse.rs  lib.rs  logging.rs  main.rs  mount.rs  network.rs  rw_buffer.rs  util.rs
client/src/config/: cache.rs  file_system.rs  logging.rs  mount.rs
client/src/fs_model/: attributes.rs  directory.rs  file.rs  mod.rs  node.rs  node_lab5.rs  sym_link.rs
client/src/fuse/: unix.rs  windows.rs
client/src/gui/: app.slint  logic.rs  mod.rs
client/src/logging/: console.rs  file.rs
client/src/mount/: unix.rs  windows.rs
client/src/network/: client.rs  middleware.rs  models.rs
client/tests/: cli_parsing.rs  integration.rs  metadata_flow.rs  read_flow.rs  resilience_flow.rs  write_flow.rs
client/tests/common/: mod.rs
docker/: Dockerfile.client  Dockerfile.server
docs/: TESTING.md
scripts/: installer_wrapper.sh
scripts/unix/: utils.sh
scripts/unix/client/: build.sh
scripts/unix/server/: build.sh
scripts/windows/client/: build.bat  build.ps1
server/: .env  Cargo.toml  Dockerfile  db.db
server/migrations/: 20251125_create_tables.sql  20251201_create_tables.sql  20251204_create_tables.sql  20251215_create_tables.sql
server/src/: app.rs  attributes.rs  commands.rs  config.rs  db.rs  error.rs  lib.rs  logging.rs  main.rs  middleware.rs  models.rs  nodes.rs  routes.rs  storage.rs  storage_old_with_memory.rs  util.rs
server/src/config/: logging.rs
server/src/logging/: file.rs
server/tests/: auth_flow.rs  integration.rs  metadata_flow.rs  read_flow.rs  resilience_flow.rs  write_flow.rs
server/tests/common/: mod.rs
src/: binary.rs  client.rs  lib.rs  main.rs  server.rs
src/fs_model/: mod.rs  node.rs
tests/: attributes.rs  basic_ops.rs  commands_attributes.rs  commands_directory.rs  commands_file.rs  commands_simlink.rs  concurrency.rs  consistency.rs  directories.rs  e2e.rs  edge_cases.rs  errors.rs  persistence.rs  resilience.rs  signals.rs  streaming.rs  symlinks.rs
tests/common/: mod.rs
