[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "ansi",
    "json",
] }
urlencoding = "2.1.3"
libc = "0.2"
base64 = "0.22.1"
futures-util = "0.3.30"
# mio = { version = "1.0.4", features = ["os-poll"] }
# tempfile = "3.10"
bytes = "1.5"
thiserror = "2"
rpassword = "7.4.0"

[target.'cfg(unix)'.dependencies]
fuse3 = { version = "0.8", features = [
    "file-lock",
    "tokio-runtime",
    "unprivileged",
] }
