[package]
name = "client"
version = "0.1.0"
edition = "2024"

[features]
int-tests = ["dep:mockall"]

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
fuse3 = { version = "0.8", features = [
    "file-lock",
    "tokio-runtime",
    "unprivileged",
] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Storage_FileSystem"] }
windows-sys = "0.61"
winfsp = "0.12"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22.1"
bitflags = "2.10.0"
bytes = "1.5"
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.15"
dotenvy = "0.15"
filetime = "0.2.27"
futures-util = "0.3.30"
http = "1.4.0"
libc = "0.2"
mockall = { version = "0.14.0", optional = true }
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.8.0"
rpassword = "7.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1.14.1", features = [
    "backend-winit",
    "renderer-software",
] }
slint-build = "1.14.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "ansi",
    "json",
] }
urlencoding = "2.1.3"

[dependencies.winit]
version = "0.30"
default-features = false
features = ["x11"]

[dev-dependencies]
mockall = "0.14.0"
rstest = "0.26"
temp-env = "0.3"
tempfile = "3"
tokio-test = "0.4"
