[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
jsonwebtoken = "8"
argon2 = { version = "0.5", features = ["std"] }
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "ansi",
    "json",
] }
tracing-actix-web = "0.7"
tracing-appender = "0.2"
walkdir = "2.3"
thiserror = "2"
sqlx = { version = "=0.8.1", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
rusqlite = "=0.32.1"
futures = "0.3.31"
uuid = "1.19.0"
bytes = "1.6"
mockall = { version = "0.14.0", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["fs", "user"] }

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
reqwest-retry = "0.8.0"
reqwest-middleware = { version = "0.4", features = ["json"] }
urlencoding = "2.1"
tempfile = "3"
temp-env = "0.3"
rstest = "0.26"

[features]
int-tests = ["dep:mockall"]
