[package]
name = "server"
version = "0.1.0"
edition = "2024"

[features]
int-tests = ["dep:mockall"]

[dependencies]
actix-web = "4"
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1"
base64 = "0.22"
bitflags = "2.10.0"
bytes = "1.6"
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.15"
dotenvy = "0.15"
filetime = "0.2.27"
futures = "0.3.31"
jsonwebtoken = "8"
mockall = { version = "0.14.0", optional = true }
once_cell = "1.21.3"
rusqlite = "=0.32.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "=0.8.1", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
thiserror = "2"
toml = "0.9.8"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "ansi",
    "json",
] }
uuid = "1.19.0"
walkdir = "2.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["fs", "user"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.8.0"
rstest = "0.26"
temp-env = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
urlencoding = "2.1"
